// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a checkbox input 1`] = `
<DocumentFragment>
  <span
    class="relative"
  >
    <input
      class="  h-0 w-0 absolute"
      data-testid="checkbox"
      id="tempId"
      type="checkbox"
      value=""
    />
    <label
      class="  font-body relative flex my-[.6em] items-center text-night-black dark:text-max-white transition-colors duration-[250ms] ease-[cubic-bezier(.4,.0,.23,1)]"
      for="tempId"
    >
      <span
        class="pointer-events-none flex justify-center items-center mr-[.9em] w-[1.1em] h-[1.1em] bg-transparent border-2 border-solid rounded-sm cursor-pointer transition-all duration-[250ms] ease-[cubic-bezier(.4,.0,.23,1)] border-night-black dark:border-max-white"
      />
      <span
        class="pointer-events-none duration-500 opacity-1"
      >
        Pizza
      </span>
      <ins
        class="pointer-events-none absolute block bottom-0 left-[2em] h-0 w-full overflow-hidden no-underline transition-[height] duration-300 ease-[cubic-bezier(.4,.0,.23,1)] "
      >
        <i
          class="pointer-events-none absolute bottom-0 not-italic text-hyper-red"
        >
          Pizza
        </i>
      </ins>
    </label>
  </span>
</DocumentFragment>
`;

exports[`shows the custom checkbox when checked 1`] = `
<DocumentFragment>
  <span
    class="relative"
  >
    <input
      class="  h-0 w-0 absolute"
      data-testid="checkbox"
      id="tempId"
      type="checkbox"
      value=""
    />
    <label
      class="  font-body relative flex my-[.6em] items-center text-night-black dark:text-max-white transition-colors duration-[250ms] ease-[cubic-bezier(.4,.0,.23,1)]"
      for="tempId"
    >
      <span
        class="pointer-events-none flex justify-center items-center mr-[.9em] w-[1.1em] h-[1.1em] bg-transparent border-2 border-solid rounded-sm cursor-pointer transition-all duration-[250ms] ease-[cubic-bezier(.4,.0,.23,1)] border-[.55em] border-solid border-hyper-red animate-shrinkbounce before:content-[""] before:min-w-[7px] before:min-h-[14px] before:absolute before:top-[.7em] before:left-[.4em] before:border-r-[3px] before:border-b-[3px] before:border-solid before:border-transparent before:rotate-45 before:origin-[0% 100%] before:animate-check"
      />
      <span
        class="pointer-events-none duration-500 opacity-0"
      >
        Pizza
      </span>
      <ins
        class="pointer-events-none absolute block bottom-0 left-[2em] h-0 w-full overflow-hidden no-underline transition-[height] duration-300 ease-[cubic-bezier(.4,.0,.23,1)] h-full"
      >
        <i
          class="pointer-events-none absolute bottom-0 not-italic text-hyper-red"
        >
          Pizza
        </i>
      </ins>
    </label>
  </span>
</DocumentFragment>
`;
